--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,3 +1,42 @@
 {
-  "SIGNOUT": "Cerrar sesión"
+  "AND": " y",
+  "BACK": "Volver",
+  "CLOSE_MENU": "Cerrar menú",
+  "ERR": {
+    "EMAIL_INVALID": "Por favor, introduce un email válido",
+    "EMAIL_REQUIRED": "El email es obligatorio",
+    "PASSWORD_INVALID": "La contraseña debe tener al menos 6 caracteres",
+    "PASSWORD_REQUIRED": "La contraseña es obligatoria"
+  },
+  "HIDE_PASSWORD": "Ocultar contraseña",
+  "MSG": {
+    "NOTHING_HERE": "Upps! Aquí no hay nada",
+    "NOTHING_MAN": "¯\\_(ツ)_/¯"
+  },
+  "OPEN_MENU": "Abrir menú",
+  "PROP": {
+    "NAME": "Nombre",
+    "TAG": "Etiqueta"
+  },
+  "RESET_EMAIL": "Reiniciar campo de correo electrónico",
+  "SHOW_PASSWORD": "Mostrar contraseña",
+  "SEARCH_STUDENT": "Buscar alumno",
+  "SETTINGS": "Configuración",
+  "SIGN" : {
+    "IN_WITH_EMAIL": "Iniciar sesión con correo electrónico",
+    "IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
+    "IN_WITH_GOOGLE": "Iniciar sesión con Google",
+    "IN_WITH_TWITTER": "Iniciar sesión con Twitter",
+    "IN": "Iniciar sesión",
+    "OUT": "Cerrar sesión"
+  },
+  "SORT_COLUMN": "Ordenar columna",
+  "STUDENTS": "Alumnos",
+  "SUBJECTS": "Asignaturas",
+  "THEME": "Tema",
+  "THEMING": {
+    "DARK_MODE": "Modo oscuro",
+    "DARK_THEME": "Tema oscuro",
+    "LIGHT_THEME": "Tema claro"
+  }
 }
