--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,7 +1,9 @@
 {
   "AND": " y",
+  "APP_SUBTITLE": "Organiza tus clases particulares",
   "BACK": "Volver",
   "CLOSE_MENU": "Cerrar menú",
+  "EMAIL": "Email",
   "ERR": {
     "EMAIL_INVALID": "Por favor, introduce un email válido",
     "EMAIL_REQUIRED": "El email es obligatorio",
@@ -9,11 +11,18 @@
     "PASSWORD_REQUIRED": "La contraseña es obligatoria"
   },
   "HIDE_PASSWORD": "Ocultar contraseña",
+  "GENERAL": "General",
+  "LANGUAGE": "Idioma",
+  "LANG": {
+    "ES": "Español",
+    "EN": "English"
+  },
   "MSG": {
     "NOTHING_HERE": "Upps! Aquí no hay nada",
     "NOTHING_MAN": "¯\\_(ツ)_/¯"
   },
   "OPEN_MENU": "Abrir menú",
+  "PASSWORD": "Contraseña",
   "PROP": {
     "NAME": "Nombre",
     "TAG": "Etiqueta"
@@ -22,7 +31,7 @@
   "SHOW_PASSWORD": "Mostrar contraseña",
   "SEARCH_STUDENT": "Buscar alumno",
   "SETTINGS": "Configuración",
-  "SIGN" : {
+  "SIGN": {
     "IN_WITH_EMAIL": "Iniciar sesión con correo electrónico",
     "IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
     "IN_WITH_GOOGLE": "Iniciar sesión con Google",
