--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,12 +3,14 @@
   "APP_SUBTITLE": "Organiza tus clases particulares",
   "BACK": "Volver",
   "CLOSE_MENU": "Cerrar menú",
+  "CONFIRM_PASSWORD": "Confirmar contraseña",
   "EMAIL": "Email",
   "ERR": {
     "EMAIL_INVALID": "Por favor, introduce un email válido",
     "EMAIL_REQUIRED": "El email es obligatorio",
     "PASSWORD_INVALID": "La contraseña debe tener al menos 6 caracteres",
-    "PASSWORD_REQUIRED": "La contraseña es obligatoria"
+    "PASSWORD_REQUIRED": "La contraseña es obligatoria",
+    "PASSWORD_NOT_MATCH": "Las contraseñas no coinciden"
   },
   "FLAG_OF": "Bandera de ",
   "HIDE_PASSWORD": "Ocultar contraseña",
@@ -20,7 +22,9 @@
   },
   "MSG": {
     "NOTHING_HERE": "Upps! Aquí no hay nada",
-    "NOTHING_MAN": "¯\\_(ツ)_/¯"
+    "NOTHING_MAN": "¯\\_(ツ)_/¯",
+    "NO_ACCOUNT": "¿Aún no eres usuario?",
+    "YES_ACCOUNT": "¿Ya tienes una cuenta?"
   },
   "OPEN_MENU": "Abrir menú",
   "PASSWORD": "Contraseña",
@@ -33,12 +37,12 @@
   "SEARCH_STUDENT": "Buscar alumno",
   "SETTINGS": "Configuración",
   "SIGN": {
-    "IN_WITH_EMAIL": "Iniciar sesión con correo electrónico",
     "IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
     "IN_WITH_GOOGLE": "Iniciar sesión con Google",
     "IN_WITH_TWITTER": "Iniciar sesión con Twitter",
     "IN": "Iniciar sesión",
-    "OUT": "Cerrar sesión"
+    "OUT": "Cerrar sesión",
+    "UP": "Crear cuenta"
   },
   "SORT_COLUMN": "Ordenar columna",
   "STUDENTS": "Alumnos",
