--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,61 +7,49 @@
   "CLOSE_MENU": "Close menu",
   "CONFIRM_PASSWORD": "Confirm password",
   "EMAIL": "Email",
-  "ERR": {
-    "AUTH_INVALID": "The password or the email is invalid",
-    "CONFIRM_PASSWORD_NOT_MATCH": "Passwords do not match",
-    "CONFIRM_PASSWORD_REQUIRED": "You must confirm the password",
-    "EMAIL_INVALID": "Please, enter valid email address",
-    "EMAIL_REQUIRED": "Email is required",
-    "PASSWORD_INVALID": "Password needs to be at least six characters",
-    "PASSWORD_REQUIRED": "Password is required",
-    "UNEXPECTED_ERROR": "An unexpected error occurred. Please try again later"
-  },
+  "ERR.AUTH_INVALID": "The password or the email is invalid",
+  "ERR.CONFIRM_PASSWORD_NOT_MATCH": "Passwords do not match",
+  "ERR.CONFIRM_PASSWORD_REQUIRED": "You must confirm the password",
+  "ERR.EMAIL_INVALID": "Please, enter valid email address",
+  "ERR.EMAIL_REQUIRED": "Email is required",
+  "ERR.PASSWORD_INVALID": "Password needs to be at least six characters",
+  "ERR.PASSWORD_REQUIRED": "Password is required",
+  "ERR.UNEXPECTED_ERROR": "An unexpected error occurred. Please try again later",
   "FLAG_OF": "Flag of ",
   "HIDE_PASSWORD": "Hide password",
   "GENERAL": "General",
   "LANGUAGE": "Language",
-  "LANG": {
-    "ES": "Spanish",
-    "EN": "English"
-  },
-  "MSG": {
-    "BYE": "See you soon!",
-    "LOGOUT": "Do you want to log out?",
-    "LOGOUT.CONFIRM": "If you do we hope you come back soon :)",
-    "NO_ACCOUNT": "Not a member yet?",
-    "NOTHING_HERE": "Upps! There is nothing here",
-    "NOTHING_MAN": "¯\\_(ツ)_/¯",
-    "SERVICE_NOT_AVAILABLE": "This service will be available soon",
-    "WELCOME": "Hello {{name}}!",
-    "YES_ACCOUNT": "Do you already have an account?"
-  },
+  "LANG.ES": "Spanish",
+  "LANG.EN": "English",
+  "MSG.BYE": "See you soon!",
+  "MSG.LOGOUT": "Do you want to log out?",
+  "MSG.LOGOUT.CONFIRM": "If you do we hope you come back soon :)",
+  "MSG.NO_ACCOUNT": "Not a member yet?",
+  "MSG.NOTHING_HERE": "Upps! There is nothing here",
+  "MSG.NOTHING_MAN": "¯\\_(ツ)_/¯",
+  "MSG.SERVICE_NOT_AVAILABLE": "This service will be available soon",
+  "MSG.WELCOME": "Hello {{name}}!",
+  "MSG.YES_ACCOUNT": "Do you already have an account?",
   "OPEN_MENU": "Open menú",
   "PASSWORD": "Password",
-  "PROP": {
-    "NAME": "Name",
-    "TAG": "Tag"
-  },
+  "PROP.NAME": "Name",
+  "PROP.TAG": "Tag",
   "RESET_EMAIL": "Reset email field",
   "RESET_FILTER": "Reset filter",
   "SHOW_PASSWORD": "Show password",
   "SEARCH_STUDENT": "Search student",
   "SETTINGS": "Settings",
-  "SIGN": {
-    "IN_WITH_FACEBOOK": "Sign in with Facebook",
-    "IN_WITH_GOOGLE": "Sign in with Google",
-    "IN_WITH_TWITTER": "Sign in with Twitter",
-    "IN": "Sign in",
-    "OUT": "Logout",
-    "UP": "Sign up"
-  },
+  "SIGN.IN_WITH_FACEBOOK": "Sign in with Facebook",
+  "SIGN.IN_WITH_GOOGLE": "Sign in with Google",
+  "SIGN.IN_WITH_TWITTER": "Sign in with Twitter",
+  "SIGN.IN": "Sign in",
+  "SIGN.OUT": "Logout",
+  "SIGN.UP": "Sign up",
   "SORT_COLUMN": "Sort column",
   "STUDENTS": "Students",
   "SUBJECTS": "Subjects",
   "THEME": "Theme",
-  "THEMING": {
-    "DARK_MODE": "Dark mode",
-    "DARK_THEME": "Dark theme",
-    "LIGHT_THEME": "light theme"
-  }
+  "THEMING.DARK_MODE": "Dark mode",
+  "THEMING.DARK_THEME": "Dark theme",
+  "THEMING.LIGHT_THEME": "light theme"
 }
