--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,61 +7,49 @@
   "CLOSE_MENU": "Cerrar menú",
   "CONFIRM_PASSWORD": "Confirmar contraseña",
   "EMAIL": "Email",
-  "ERR": {
-    "AUTH_INVALID": "Email o contraseña incorrecta",
-    "CONFIRM_PASSWORD_NOT_MATCH": "Las contraseñas no coinciden",
-    "CONFIRM_PASSWORD_REQUIRED": "Debes confirmar la contraseña",
-    "EMAIL_INVALID": "Por favor, introduce un email válido",
-    "EMAIL_REQUIRED": "El email es obligatorio",
-    "PASSWORD_INVALID": "La contraseña debe tener al menos 6 caracteres",
-    "PASSWORD_REQUIRED": "La contraseña es obligatoria",
-    "UNEXPECTED_ERROR": "Ocurrió un error inexperado. Por favor, vuelva a intentarlo más tarde"
-  },
+  "ERR.AUTH_INVALID": "Email o contraseña incorrecta",
+  "ERR.CONFIRM_PASSWORD_NOT_MATCH": "Las contraseñas no coinciden",
+  "ERR.CONFIRM_PASSWORD_REQUIRED": "Debes confirmar la contraseña",
+  "ERR.EMAIL_INVALID": "Por favor, introduce un email válido",
+  "ERR.EMAIL_REQUIRED": "El email es obligatorio",
+  "ERR.PASSWORD_INVALID": "La contraseña debe tener al menos 6 caracteres",
+  "ERR.PASSWORD_REQUIRED": "La contraseña es obligatoria",
+  "ERR.UNEXPECTED_ERROR": "Ocurrió un error inexperado. Por favor, vuelva a intentarlo más tarde",
   "FLAG_OF": "Bandera de ",
   "HIDE_PASSWORD": "Ocultar contraseña",
   "GENERAL": "General",
   "LANGUAGE": "Idioma",
-  "LANG": {
-    "ES": "Español",
-    "EN": "Inglés"
-  },
-  "MSG": {
-    "BYE": "¡Hasta pronto!",
-    "LOGOUT": "¿Quieres cerrar la sesión?",
-    "LOGOUT.CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
-    "NO_ACCOUNT": "¿Aún no eres usuario?",
-    "NOTHING_HERE": "Upps! Aquí no hay nada",
-    "NOTHING_MAN": "¯\\_(ツ)_/¯",
-    "SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
-    "WELCOME": "¡Hola {{name}}!",
-    "YES_ACCOUNT": "¿Ya tienes una cuenta?"
-  },
+  "LANG.ES": "Español",
+  "LANG.EN": "Inglés",
+  "MSG.BYE": "¡Hasta pronto!",
+  "MSG.LOGOUT": "¿Quieres cerrar la sesión?",
+  "MSG.LOGOUT.CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
+  "MSG.NO_ACCOUNT": "¿Aún no eres usuario?",
+  "MSG.NOTHING_HERE": "Upps! Aquí no hay nada",
+  "MSG.NOTHING_MAN": "¯\\_(ツ)_/¯",
+  "MSG.SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
+  "MSG.WELCOME": "¡Hola {{name}}!",
+  "MSG.YES_ACCOUNT": "¿Ya tienes una cuenta?",
   "OPEN_MENU": "Abrir menú",
   "PASSWORD": "Contraseña",
-  "PROP": {
-    "NAME": "Nombre",
-    "TAG": "Etiqueta"
-  },
+  "PROP.NAME": "Nombre",
+  "PROP.TAG": "Etiqueta",
   "RESET_EMAIL": "Reiniciar campo de correo electrónico",
   "RESET_FILTER": "Reiniciar filtro",
   "SHOW_PASSWORD": "Mostrar contraseña",
   "SEARCH_STUDENT": "Buscar alumno",
   "SETTINGS": "Configuración",
-  "SIGN": {
-    "IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
-    "IN_WITH_GOOGLE": "Iniciar sesión con Google",
-    "IN_WITH_TWITTER": "Iniciar sesión con Twitter",
-    "IN": "Iniciar sesión",
-    "OUT": "Cerrar sesión",
-    "UP": "Crear cuenta"
-  },
+  "SIGN.IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
+  "SIGN.IN_WITH_GOOGLE": "Iniciar sesión con Google",
+  "SIGN.IN_WITH_TWITTER": "Iniciar sesión con Twitter",
+  "SIGN.IN": "Iniciar sesión",
+  "SIGN.OUT": "Cerrar sesión",
+  "SIGN.UP": "Crear cuenta",
   "SORT_COLUMN": "Ordenar columna",
   "STUDENTS": "Alumnos",
   "SUBJECTS": "Asignaturas",
   "THEME": "Tema",
-  "THEMING": {
-    "DARK_MODE": "Modo oscuro",
-    "DARK_THEME": "Tema oscuro",
-    "LIGHT_THEME": "Tema claro"
-  }
+  "THEMING.DARK_MODE": "Modo oscuro",
+  "THEMING.DARK_THEME": "Tema oscuro",
+  "THEMING.LIGHT_THEME": "Tema claro"
 }
