usert collections and pickup avatars

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,6 +2,7 @@
   "ADD_STUDENT": "Añadir alumno",
   "AND": " y",
   "APP_SUBTITLE": "Organiza tus clases particulares",
+  "AVATAR": "Imagen de perfil",
   "BACK": "Volver",
   "CANCEL": "Cancelar",
   "CLOSE_MENU": "Cerrar menú",
@@ -10,35 +11,99 @@
   "ERR.AUTH_INVALID": "Email o contraseña incorrecta",
   "ERR.CONFIRM_PASSWORD_NOT_MATCH": "Las contraseñas no coinciden",
   "ERR.CONFIRM_PASSWORD_REQUIRED": "Debes confirmar la contraseña",
+  "ERR.EMAIL_ALREADY_IN_USE": "Este correo electrónico ya está siendo utilizado",
   "ERR.EMAIL_INVALID": "Por favor, introduce un email válido",
   "ERR.EMAIL_REQUIRED": "El email es obligatorio",
   "ERR.PASSWORD_INVALID": "La contraseña debe tener al menos 6 caracteres",
   "ERR.PASSWORD_REQUIRED": "La contraseña es obligatoria",
   "ERR.UNEXPECTED_ERROR": "Ocurrió un error inexperado. Por favor, vuelva a intentarlo más tarde",
+  "ERR.USER_NOT_FOUND": "Usuario no encontrado",
+  "FINALIZE": "Finalizar",
   "FLAG_OF": "Bandera de ",
-  "HIDE_PASSWORD": "Ocultar contraseña",
+  "FORM.ACADEMIC_COURSE": "Curso académico",
+  "FORM.AGE": "Edad",
+  "FORM.CONSERVATORY_COURSE": "Curso del conservatorio",
+  "FORM.CONSERVATORY_TEACHER": "Profesor del conservatorio",
+  "FORM.COURSE.ELEMENTARY": "Elemental",
+  "FORM.COURSE.HIGH_SCHOOL": "Bachillerato",
+  "FORM.COURSE.PRIMARY": "Primaria",
+  "FORM.COURSE.PROFESSIONAL": "Profesional",
+  "FORM.COURSE.SECONDARY": "Secundaria",
+  "FORM.COURSE.SUPERIOR": "Superior",
+  "FORM.FATHERS_NAME": "Nombre del padre",
+  "FORM.GENDER": "Género",
+  "FORM.INSTRUMENT": "Instrumento",
+  "FORM.MOTHERS_NAME": "Nombre de la madre",
+  "FORM.NAME": "Nombre",
+  "FORM.NOTES": "Notas",
+  "FORM.OBSERVATION": "Observación",
+  "FORM.OBSERVATIONS": "Observaciones",
+  "FORM.PHONE": "Teléfono",
+  "FORM.PHONES": "Teléfonos",
+  "FORM.PICTURE": "Imagen",
+  "FORM.SUBJECT": "Asignatura",
+  "FORM.SUBJECTS": "Asignaturas",
+  "FORM.SURNAME": "Apellidos",
   "GENERAL": "General",
-  "LANGUAGE": "Idioma",
-  "LANG.ES": "Español",
+  "HIDE_PASSWORD": "Ocultar contraseña",
+  "INSTRUMENT.ACCORDION": "Acordeón",
+  "INSTRUMENT.BAGPIPE": "Gaita",
+  "INSTRUMENT.BASSOON": "Fagot",
+  "INSTRUMENT.CELLO": "Violonchelo",
+  "INSTRUMENT.CLARINET": "Clarinete",
+  "INSTRUMENT.CLAVE": "Clave",
+  "INSTRUMENT.DOUBLE_BASS": "Contrabajo",
+  "INSTRUMENT.FLUTE": "Flauta dulce",
+  "INSTRUMENT.GUITAR": "Guitarra",
+  "INSTRUMENT.HARP": "Arpa",
+  "INSTRUMENT.HORN": "Trompa",
+  "INSTRUMENT.OBOE": "Oboe",
+  "INSTRUMENT.PERCUSSION": "Percusión",
+  "INSTRUMENT.PIANO": "Piano",
+  "INSTRUMENT.SAXOPHONE": "Saxofón",
+  "INSTRUMENT.TRANSVERSE_FLUTE": "Flauta travesera",
+  "INSTRUMENT.TROMBONE": "Trombón",
+  "INSTRUMENT.TRUMPET": "Trompeta",
+  "INSTRUMENT.TUBA": "Tuba",
+  "INSTRUMENT.TXISTU": "Txistu",
+  "INSTRUMENT.VIOLA": "Viola",
+  "INSTRUMENT.VIOLIN": "Violín",
+  "INSTRUMENT": "Instrumento",
+  "INSTRUMENTS.GROUP.PERCUSSION": "Percusión",
+  "INSTRUMENTS.GROUP.STRING": "Cuerda",
+  "INSTRUMENTS.GROUP.WIND": "Viento",
+  "INSTRUMENTS": "Instrumentos",
+  "LABEL_NO": "Sin etiqueta",
   "LANG.EN": "Inglés",
+  "LANG.ES": "Español",
+  "LANGUAGE": "Idioma",
   "MSG.BYE": "¡Hasta pronto!",
-  "MSG.LOGOUT": "¿Quieres cerrar la sesión?",
   "MSG.LOGOUT.CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
+  "MSG.LOGOUT": "¿Quieres cerrar la sesión?",
   "MSG.NO_ACCOUNT": "¿Aún no eres usuario?",
   "MSG.NOTHING_HERE": "Upps! Aquí no hay nada",
   "MSG.NOTHING_MAN": "¯\\_(ツ)_/¯",
   "MSG.SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
+  "MSG.STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
   "MSG.WELCOME": "¡Hola {{name}}!",
   "MSG.YES_ACCOUNT": "¿Ya tienes una cuenta?",
+  "NEXT": "Siguiente",
+  "NONE": "Ninguno/a",
   "OPEN_MENU": "Abrir menú",
   "PASSWORD": "Contraseña",
+  "PICKUP_IMAGE": "Selecciona un avatar",
+  "PREVIOUS": "Anterior",
   "PROP.NAME": "Nombre",
-  "PROP.TAG": "Etiqueta",
+  "PROP.LABEL": "Etiqueta",
+  "PROP.LABEL_NO": "Sin etiqueta",
+  "RESET": "Reiniciar",
   "RESET_EMAIL": "Reiniciar campo de correo electrónico",
   "RESET_FILTER": "Reiniciar filtro",
-  "SHOW_PASSWORD": "Mostrar contraseña",
+  "SAVE": "Guardar",
   "SEARCH_STUDENT": "Buscar alumno",
+  "SELECT": "Seleccionar",
   "SETTINGS": "Configuración",
+  "SHOW_PASSWORD": "Mostrar contraseña",
   "SIGN.IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
   "SIGN.IN_WITH_GOOGLE": "Iniciar sesión con Google",
   "SIGN.IN_WITH_TWITTER": "Iniciar sesión con Twitter",
@@ -46,10 +111,19 @@
   "SIGN.OUT": "Cerrar sesión",
   "SIGN.UP": "Crear cuenta",
   "SORT_COLUMN": "Ordenar columna",
+  "STUDENT_CONSERVATORY_DATA": "Conservatorio",
+  "STUDENT_PARENTS_DATA": "Padres",
+  "STUDENT_PERSONAL_DATA": "Alumno",
+  "STUDENT": "Alumno",
   "STUDENTS": "Alumnos",
+  "SUBJECT.LANGUAGE": "Lenguaje musical",
+  "SUBJECT.CELLO": "Violonchelo",
+  "SUBJECT.VIOLIN": "Violín",
   "SUBJECTS": "Asignaturas",
   "THEME": "Tema",
   "THEMING.DARK_MODE": "Modo oscuro",
   "THEMING.DARK_THEME": "Tema oscuro",
-  "THEMING.LIGHT_THEME": "Tema claro"
+  "THEMING.LIGHT_THEME": "Tema claro",
+  "YEAR": "año",
+  "YEARS": "años"
 }
