--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
   "ADD_STUDENT": "Add student",
   "AND": " and",
   "APP_SUBTITLE": "Organize your private lessons",
+  "AVATAR": "Avatar",
   "BACK": "Back",
   "CANCEL": "Cancel",
   "CLOSE_MENU": "Close menu",
@@ -10,35 +11,99 @@
   "ERR.AUTH_INVALID": "The password or the email is invalid",
   "ERR.CONFIRM_PASSWORD_NOT_MATCH": "Passwords do not match",
   "ERR.CONFIRM_PASSWORD_REQUIRED": "You must confirm the password",
+  "ERR.EMAIL_ALREADY_IN_USE": "The email address is already in use by another account",
   "ERR.EMAIL_INVALID": "Please, enter valid email address",
   "ERR.EMAIL_REQUIRED": "Email is required",
   "ERR.PASSWORD_INVALID": "Password needs to be at least six characters",
   "ERR.PASSWORD_REQUIRED": "Password is required",
   "ERR.UNEXPECTED_ERROR": "An unexpected error occurred. Please try again later",
+  "ERR.USER_NOT_FOUND": "User nor found",
+  "FINALIZE": "Finalize",
   "FLAG_OF": "Flag of ",
-  "HIDE_PASSWORD": "Hide password",
+  "FORM.ACADEMIC_COURSE": "ACADEMIC_COURSE",
+  "FORM.AGE": "AGE",
+  "FORM.CONSERVATORY_COURSE": "Conservatory course",
+  "FORM.CONSERVATORY_TEACHER": "Conservatory teacher",
+  "FORM.COURSE.ELEMENTARY": "Elementary",
+  "FORM.COURSE.HIGH_SCHOOL": "High School",
+  "FORM.COURSE.PRIMARY": "Primary",
+  "FORM.COURSE.PROFESSIONAL": "Prefessional",
+  "FORM.COURSE.SECONDARY": "Secondary",
+  "FORM.COURSE.SUPERIOR": "Superior",
+  "FORM.FATHERS_NAME": "Father's name",
+  "FORM.GENDER": "Gender",
+  "FORM.INSTRUMENT": "instrument",
+  "FORM.MOTHERS_NAME": "Mother's name",
+  "FORM.NAME": "Name",
+  "FORM.NOTES": "Notes",
+  "FORM.OBSERVATION": "Observation",
+  "FORM.OBSERVATIONS": "Observations",
+  "FORM.PHONE": "Phone",
+  "FORM.PHONES": "Phones",
+  "FORM.PICTURE": "Picture",
+  "FORM.SUBJECT": "Subject",
+  "FORM.SUBJECTS": "Subjects",
+  "FORM.SURNAME": "Surname",
   "GENERAL": "General",
-  "LANGUAGE": "Language",
-  "LANG.ES": "Spanish",
+  "HIDE_PASSWORD": "Hide password",
+  "INSTRUMENT.ACCORDION": "Accordion",
+  "INSTRUMENT.BAGPIPE": "Bagpie",
+  "INSTRUMENT.BASSOON": "Basson",
+  "INSTRUMENT.CELLO": "Cello",
+  "INSTRUMENT.CLARINET": "Clarinet",
+  "INSTRUMENT.CLAVE": "Clave",
+  "INSTRUMENT.DOUBLE_BASS": "Double bass",
+  "INSTRUMENT.FLUTE": "Flauta",
+  "INSTRUMENT.GUITAR": "Guittar",
+  "INSTRUMENT.HARP": "Harp",
+  "INSTRUMENT.HORN": "Horn",
+  "INSTRUMENT.OBOE": "Oboe",
+  "INSTRUMENT.PERCUSSION": "Percussion",
+  "INSTRUMENT.PIANO": "Piano",
+  "INSTRUMENT.SAXOPHONE": "Saxophone",
+  "INSTRUMENT.TRANSVERSE_FLUTE": "Transverse flute",
+  "INSTRUMENT.TROMBONE": "Trombone",
+  "INSTRUMENT.TRUMPET": "Trumpet",
+  "INSTRUMENT.TUBA": "Tuba",
+  "INSTRUMENT.TXISTU": "Txistu",
+  "INSTRUMENT.VIOLA": "Viola",
+  "INSTRUMENT.VIOLIN": "Violin",
+  "INSTRUMENT": "Instrument",
+  "INSTRUMENTS.GROUP.PERCUSSION": "Percussion",
+  "INSTRUMENTS.GROUP.STRING": "String",
+  "INSTRUMENTS.GROUP.WIND": "Wind",
+  "INSTRUMENTS": "Instrumentos",
+  "LABEL_NO": "No label",
   "LANG.EN": "English",
+  "LANG.ES": "Spanish",
+  "LANGUAGE": "Language",
   "MSG.BYE": "See you soon!",
-  "MSG.LOGOUT": "Do you want to log out?",
   "MSG.LOGOUT.CONFIRM": "If you do we hope you come back soon :)",
+  "MSG.LOGOUT": "Do you want to log out?",
   "MSG.NO_ACCOUNT": "Not a member yet?",
   "MSG.NOTHING_HERE": "Upps! There is nothing here",
   "MSG.NOTHING_MAN": "¯\\_(ツ)_/¯",
   "MSG.SERVICE_NOT_AVAILABLE": "This service will be available soon",
+  "MSG.STUDENT_CREATE_OK": "A new student has signed up for class",
   "MSG.WELCOME": "Hello {{name}}!",
   "MSG.YES_ACCOUNT": "Do you already have an account?",
+  "NEXT": "Next",
+  "NONE": "None",
   "OPEN_MENU": "Open menú",
   "PASSWORD": "Password",
+  "PICKUP_IMAGE": "Pick up an avatar",
+  "PREVIOUS": "Previous",
   "PROP.NAME": "Name",
-  "PROP.TAG": "Tag",
+  "PROP.LABEL": "Label",
+  "PROP.LABEL_NO": "No label",
+  "RESET": "Reset",
   "RESET_EMAIL": "Reset email field",
   "RESET_FILTER": "Reset filter",
-  "SHOW_PASSWORD": "Show password",
+  "SAVE": "Save",
   "SEARCH_STUDENT": "Search student",
+  "SELECT": "Select",
   "SETTINGS": "Settings",
+  "SHOW_PASSWORD": "Show password",
   "SIGN.IN_WITH_FACEBOOK": "Sign in with Facebook",
   "SIGN.IN_WITH_GOOGLE": "Sign in with Google",
   "SIGN.IN_WITH_TWITTER": "Sign in with Twitter",
@@ -46,10 +111,19 @@
   "SIGN.OUT": "Logout",
   "SIGN.UP": "Sign up",
   "SORT_COLUMN": "Sort column",
+  "STUDENT_CONSERVATORY_DATA": "Musical data",
+  "STUDENT_PARENTS_DATA": "Parent's data",
+  "STUDENT_PERSONAL_DATA": "Student data",
+  "STUDENT": "Student",
   "STUDENTS": "Students",
+  "SUBJECT.LANGUAGE": "Musical languaje",
+  "SUBJECT.CELLO": "Cello",
+  "SUBJECT.VIOLIN": "Violin",
   "SUBJECTS": "Subjects",
   "THEME": "Theme",
   "THEMING.DARK_MODE": "Dark mode",
   "THEMING.DARK_THEME": "Dark theme",
-  "THEMING.LIGHT_THEME": "light theme"
+  "THEMING.LIGHT_THEME": "light theme",
+  "YEAR": "year",
+  "YEARS": "years"
 }
