fix some bugs and css avatar list OK

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,11 +2,14 @@
   "ADD_STUDENT": "Add student",
   "AND": " and",
   "APP_SUBTITLE": "Organize your private lessons",
+  "ARCHIVE_STUDENT": "Archive student",
   "AVATAR": "Avatar",
   "BACK": "Back",
   "CANCEL": "Cancel",
   "CLOSE_MENU": "Close menu",
   "CONFIRM_PASSWORD": "Confirm password",
+  "DELETE_STUDENT": "Delete student",
+  "EDIT_STUDENT": "Edit student",
   "EMAIL": "Email",
   "ERR.AUTH_INVALID": "The password or the email is invalid",
   "ERR.CONFIRM_PASSWORD_NOT_MATCH": "Passwords do not match",
@@ -89,16 +92,17 @@
   "MSG.YES_ACCOUNT": "Do you already have an account?",
   "NEXT": "Next",
   "NONE": "None",
-  "OPEN_MENU": "Open menú",
+  "OPEN_MENU": "Open menu",
+  "OPTION_MENU": "Pption menu",
   "PASSWORD": "Password",
   "PICKUP_IMAGE": "Pick up an avatar",
   "PREVIOUS": "Previous",
-  "PROP.NAME": "Name",
-  "PROP.LABEL": "Label",
   "PROP.LABEL_NO": "No label",
-  "RESET": "Reset",
+  "PROP.LABEL": "Label",
+  "PROP.NAME": "Name",
   "RESET_EMAIL": "Reset email field",
   "RESET_FILTER": "Reset filter",
+  "RESET": "Reset",
   "SAVE": "Save",
   "SEARCH_STUDENT": "Search student",
   "SELECT": "Select",
@@ -116,8 +120,8 @@
   "STUDENT_PERSONAL_DATA": "Student data",
   "STUDENT": "Student",
   "STUDENTS": "Students",
-  "SUBJECT.LANGUAGE": "Musical languaje",
   "SUBJECT.CELLO": "Cello",
+  "SUBJECT.LANGUAGE": "Musical languaje",
   "SUBJECT.VIOLIN": "Violin",
   "SUBJECTS": "Subjects",
   "THEME": "Theme",
