--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,11 +2,14 @@
   "ADD_STUDENT": "Añadir alumno",
   "AND": " y",
   "APP_SUBTITLE": "Organiza tus clases particulares",
+  "ARCHIVE_STUDENT": "Archivar alumno",
   "AVATAR": "Imagen de perfil",
   "BACK": "Volver",
   "CANCEL": "Cancelar",
   "CLOSE_MENU": "Cerrar menú",
   "CONFIRM_PASSWORD": "Confirmar contraseña",
+  "DELETE_STUDENT": "Borrar alumno",
+  "EDIT_STUDENT": "Editar alumno",
   "EMAIL": "Email",
   "ERR.AUTH_INVALID": "Email o contraseña incorrecta",
   "ERR.CONFIRM_PASSWORD_NOT_MATCH": "Las contraseñas no coinciden",
@@ -90,15 +93,16 @@
   "NEXT": "Siguiente",
   "NONE": "Ninguno/a",
   "OPEN_MENU": "Abrir menú",
+  "OPTION_MENU": "Menú de opciones",
   "PASSWORD": "Contraseña",
   "PICKUP_IMAGE": "Selecciona un avatar",
   "PREVIOUS": "Anterior",
-  "PROP.NAME": "Nombre",
-  "PROP.LABEL": "Etiqueta",
   "PROP.LABEL_NO": "Sin etiqueta",
-  "RESET": "Reiniciar",
+  "PROP.LABEL": "Etiqueta",
+  "PROP.NAME": "Nombre",
   "RESET_EMAIL": "Reiniciar campo de correo electrónico",
   "RESET_FILTER": "Reiniciar filtro",
+  "RESET": "Reiniciar",
   "SAVE": "Guardar",
   "SEARCH_STUDENT": "Buscar alumno",
   "SELECT": "Seleccionar",
@@ -116,8 +120,8 @@
   "STUDENT_PERSONAL_DATA": "Alumno",
   "STUDENT": "Alumno",
   "STUDENTS": "Alumnos",
-  "SUBJECT.LANGUAGE": "Lenguaje musical",
   "SUBJECT.CELLO": "Violonchelo",
+  "SUBJECT.LANGUAGE": "Lenguaje musical",
   "SUBJECT.VIOLIN": "Violín",
   "SUBJECTS": "Asignaturas",
   "THEME": "Tema",
