Fix model selects

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,4 +1,5 @@
 {
+  "ACTION_NOT_REVERSED": "Esta acción no podrá ser revertida",
   "ADD_STUDENT": "Añadir alumno",
   "AND": " y",
   "APP_SUBTITLE": "Organiza tus clases particulares",
@@ -8,7 +9,7 @@
   "CANCEL": "Cancelar",
   "CLOSE_MENU": "Cerrar menú",
   "CONFIRM_PASSWORD": "Confirmar contraseña",
-  "DELETE_STUDENT": "Borrar alumno",
+  "DELETE": "Borrar",
   "EDIT_STUDENT": "Editar alumno",
   "EMAIL": "Email",
   "ERR.AUTH_INVALID": "Email o contraseña incorrecta",
@@ -88,6 +89,8 @@
   "MSG.NOTHING_MAN": "¯\\_(ツ)_/¯",
   "MSG.SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
   "MSG.STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
+  "MSG.STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
+  "MSG.STUDENT_UPDATE_OK": "Alumno modificado",
   "MSG.WELCOME": "¡Hola {{name}}!",
   "MSG.YES_ACCOUNT": "¿Ya tienes una cuenta?",
   "NEXT": "Siguiente",
@@ -116,6 +119,7 @@
   "SIGN.UP": "Crear cuenta",
   "SORT_COLUMN": "Ordenar columna",
   "STUDENT_CONSERVATORY_DATA": "Conservatorio",
+  "STUDENT_DELETE": "Borrar alumno",
   "STUDENT_PARENTS_DATA": "Padres",
   "STUDENT_PERSONAL_DATA": "Alumno",
   "STUDENT": "Alumno",
