--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "ACTION_NOT_REVERSED": "This action cannot be reversed.",
   "ADD_STUDENT": "Add student",
   "AND": " and",
   "APP_SUBTITLE": "Organize your private lessons",
@@ -8,7 +9,7 @@
   "CANCEL": "Cancel",
   "CLOSE_MENU": "Close menu",
   "CONFIRM_PASSWORD": "Confirm password",
-  "DELETE_STUDENT": "Delete student",
+  "DELETE": "Delete",
   "EDIT_STUDENT": "Edit student",
   "EMAIL": "Email",
   "ERR.AUTH_INVALID": "The password or the email is invalid",
@@ -88,6 +89,8 @@
   "MSG.NOTHING_MAN": "¯\\_(ツ)_/¯",
   "MSG.SERVICE_NOT_AVAILABLE": "This service will be available soon",
   "MSG.STUDENT_CREATE_OK": "A new student has signed up for class",
+  "MSG.STUDENT_DELETE": "Are you sure you want to delete this student?",
+  "MSG.STUDENT_UPDATE_OK": "Student edited",
   "MSG.WELCOME": "Hello {{name}}!",
   "MSG.YES_ACCOUNT": "Do you already have an account?",
   "NEXT": "Next",
@@ -116,6 +119,7 @@
   "SIGN.UP": "Sign up",
   "SORT_COLUMN": "Sort column",
   "STUDENT_CONSERVATORY_DATA": "Musical data",
+  "STUDENT_DELETE": "Delete student",
   "STUDENT_PARENTS_DATA": "Parent's data",
   "STUDENT_PERSONAL_DATA": "Student data",
   "STUDENT": "Student",
